objects/OpportunityTeamMember.object
<CustomObject>
    <fields>
        <fullName>Member_Profile__c</fullName>
        <description>Added to allow the NewOpportunityTeamMember Rule to access the Profile of the new Team Member ; SFDC-4051</description>
        <formula>User.Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Member Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migration_additional_information__c</fullName>
        <label>Migration additional information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the opportunity team member is the primary contact for an opportunity/renewal</description>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>